Fix HTML structure and improve formatting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+     <div class="container">
         <div class="navbar">
             <h2>Bloom</h2>
             <div class="aa">
@@ -54,13 +54,48 @@
         <div class="about">
             <div class="latest">
                 <h3>Latest Posts</h3>
+                <div style="display: flex;margin-top: 10px;">
+                <div class="dd" style="width: 45px;height: 45px;color: black;
+                background-color: rgb(253, 253, 252);font-size: 20PX; text-align: center;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; border-radius: 5px;">17 <br>July</div>
+                <p style="margin-left: 20px;">Lorem ipsum dolor adipisicing elit. <br> Rerum aut earum velit mollitia.</p></div>
+                <div style="display: flex;margin-top: 10px;">
+                <div class="dd" style="width: 45px;height: 45px;color: black;
+                background-color: rgb(253, 253, 252);font-size: 20PX; text-align: center;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; border-radius: 5px;">17 <br>July</div>
+                <p style="margin-left: 20px;">Lorem ipsum dolor adipisicing elit. <br> Rerum aut earum velit mollitia.</p></div>
+                <div style="display: flex;margin-top: 10px;">
+                <div class="dd" style="width: 45px;height: 45px;color: black;
+                background-color: rgb(253, 253, 252);font-size: 20PX; text-align: center;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; border-radius: 5px;">17 <br>July</div>
+                <p style="margin-left: 20px;">Lorem ipsum dolor adipisicing elit. <br> Rerum aut earum velit mollitia.</p></div>
                 
             </div>
-            <div class="about">
-                <h3>About</h3>
+            <div class="abot">
+                <h3>About</h3><br>
+                <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Voluptatem  et illum <br>doloribus eveniet maxime nesciunt animi. <br> Quos porro non, at temporibus voluptate <br>ratione tempora laboriosam, error, <br> consequatur ipsam sunt enim.</p>
             </div>
             <div class="contact">
                 <h3>Stay Connected</h3>
+                <div class="social-list">
+    <div class="item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Facebook_logo_%28square%29.png/500px-Facebook_logo_%28square%29.png" alt="Facebook">
+        <span>Facebook</span>
+    </div>
+
+    <div class="item">
+        <img src="https://store-images.s-microsoft.com/image/apps.60673.9007199266244427.4d45042b-d7a5-4a83-be66-97779553b24d.5d82b7eb-9734-4b51-b65d-a0383348ab1b?h=210" alt="Twitter">
+        <span>Twitter</span>
+    </div>
+
+    <div class="item">
+        <img src="https://cdn-icons-png.flaticon.com/512/124/124033.png" alt="RSS">
+        <span>RSS</span>
+    </div>
+
+    <div class="item">
+        <img src="https://w7.pngwing.com/pngs/506/509/png-transparent-google-company-text-logo.png" alt="Google+">
+        <span>Google+</span>
+    </div>
+</div>
+
             </div>
         </div>
 
